<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/search_by_name_button"
        android:layout_width="185dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="160dp"
        android:text="@string/get_all_by_name" />

    <Button
        android:id="@+id/get_by_releaseyear"
        android:layout_width="185dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="240dp"
        android:text="@string/get_all_by_release_year" />

    <Button
        android:id="@+id/get_by_stars"
        android:layout_width="185dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="320dp"
        android:text="@string/get_all_by_rating" />

    <Button
        android:id="@+id/get_by_lengthLess"
        android:layout_width="185dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="400dp"
        android:text="@string/get_all_length_less" />

    <Button
        android:id="@+id/get_by_lengthMore"
        android:layout_width="185dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="480dp"
        android:text="@string/get_all_length_more" />

    <Button
        android:id="@+id/show_all_button"
        android:layout_width="185dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="0dp"
        android:text="@string/get_all" />

    <Button
        android:id="@+id/search_by_genre_button"
        android:layout_width="185dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="80dp"
        android:text="@string/get_all_by_genre" />



</RelativeLayout>
    </ScrollView>